<resources>
    <string name="app_name">Last_22</string>
    <string name="text_error_net">没有网络，请检查网络</string>
    <string name="text_error_default">加载失败，请重试</string>
    <string name="text_phone_number">手机号</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_login">登录</string>
    <string name="text_verify_code_login">验证码登录</string>
    <string name="text_register_immediately">立即注册</string>
    <string name="text_login_by_social_count">社交账号登录</string>
    <string name="text_error_invalide_phone_number">输入手机号不正确</string>
    <string name="text_error_invalide_password">密码格式不正确</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_password_login">密码登录</string>
    <string name="text_user_license">注册即时同意见道的用户协议和隐私政策</string>
    <string name="text_error_pri_password">验证码错误</string>


    <string name="text_service_agreement_content">尊敬的用户您好，请您在使用本软件之前，认真阅读、并充分理解“见道”软件许可及服务协议（以下简称“本协议”）及各条款内容，尤其需关注免除或者限制责任的条款，并确认是否接受。您可阅读   《服务协议》和《隐私政策》了解详细信息，如同意，请点击“同意”继续阅读，享受我们的服务</string>

    <string name="text_service_agreement_title">服务协议和隐私政策</string>
    <string name="text_service_agreement">《服务协议》</string>
    <string name="text_service_privacy_policy">《隐私政策》</string>
    <string name="text_stop_to_use">暂不使用</string>
    <string name="text_agree">同意</string>
    <string name="text_tab_recommend">推荐列表</string>
    <string name="text_tab_video">视频</string>
    <string name="text_tab_special">专题</string>
    <string name="text_tab_mime">我的</string>
</resources>